--- a/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
+++ b/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48;netcoreapp2.1;netcoreapp3.1;</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp2.1;netcoreapp3.1;</TargetFrameworks>
+    <TargetFrameworks>net48;net5.0;</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp2.1;net5.0;</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
