--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -23,6 +23,7 @@ Supports Windows, Linux and macOS.</Description>
   <ItemGroup>
     <PackageReference Include="Joveler.DynLoader" Version="2.1.0" />
     <PackageReference Include="System.Memory" Version="4.5.4" Condition=" '$(TargetFramework)' == 'net451' or '$(TargetFramework)' == 'netstandard2.0' " />
+    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" Condition=" '$(TargetFramework)' == 'net451' " />
   </ItemGroup>
   <!-- Shared NuGet Files -->
   <ItemGroup>
