Fix .NET Core 3.1 build/test

--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -61,7 +61,7 @@ Supports Windows, Linux and macOS.</Description>
     </None>
   </ItemGroup>
   <!-- Native Library for .NET Standard 2.0 & 2.1 -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netcoreapp3.1'">
     <None Include="runtimes\win-x86\native\*.dll">
       <Link>runtimes\win-x86\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
