--- a/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
+++ b/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.1" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
+	<PackageReference Include="coverlet.collector" Version="3.1.2">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
