Update windows libmagic binaries to 5.43, update csproj

--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net451;netstandard2.0;netcoreapp3.1;</TargetFrameworks>
+    <TargetFrameworks>net462;netstandard2.0;netcoreapp3.1;</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netstandard2.0;netcoreapp3.1;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageId>Joveler.FileMagician</PackageId>
     <Title>Joveler.FileMagician</Title>
-    <Version>2.3.0</Version>
+    <Version>2.4.0</Version>
     <Authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</Authors>
     <Company>Joveler</Company>
     <Description>libmagic (file) pinvoke library for .NET.
@@ -24,7 +24,7 @@ Supports Windows, Linux and macOS.</Description>
   <!-- PackageReference -->
   <ItemGroup>
     <PackageReference Include="Joveler.DynLoader" Version="2.1.1" />
-    <PackageReference Include="System.Memory" Version="4.5.4" Condition=" '$(TargetFramework)' == 'net451' or '$(TargetFramework)' == 'netstandard2.0' " />
+    <PackageReference Include="System.Memory" Version="4.5.5" Condition=" '$(TargetFramework)' == 'net462' or '$(TargetFramework)' == 'netstandard2.0' " />
   </ItemGroup>
   <!-- Shared NuGet Files -->
   <ItemGroup>
@@ -49,8 +49,8 @@ Supports Windows, Linux and macOS.</Description>
       <PackageCopyToOutput>true</PackageCopyToOutput>
     </Content>
   </ItemGroup>
-  <!-- Native Library for .NET Framework 4.5.1 -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+  <!-- Native Library for .NET Framework 4.6.2 -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
     <None Include="runtimes\win-x86\native\*.dll">
       <Link>x86\%(FileName)%(Extension)</Link> <!-- Project Reference -->
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -60,7 +60,7 @@ Supports Windows, Linux and macOS.</Description>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <!-- Native Library for .NET Standard 2.0 & 2.1 -->
+  <!-- Native Library for .NET Standard 2.0 & .NET Core 3.1 -->
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netcoreapp3.1'">
     <None Include="runtimes\win-x86\native\*.dll">
       <Link>runtimes\win-x86\native\%(FileName)%(Extension)</Link> <!-- Project Reference -->
@@ -98,7 +98,7 @@ Supports Windows, Linux and macOS.</Description>
   <!-- NuGet Pacakge -->
   <ItemGroup>
     <!-- Build Script for .NET Framework -->
-    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net451\Joveler.FileMagician.targets" />
+    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net462\Joveler.FileMagician.targets" />
     <!-- NuGet Pacakge Icon -->
     <None Include="..\Image\Logo.png" Pack="true" PackagePath="images\Logo.png" />
     <!-- Native Library -->
