--- a/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
+++ b/Joveler.FileMagician.Tests/Joveler.FileMagician.Tests.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!-- Target .NET Framework 4.8 & .NET 6 | .NET Core 3.x or lower has stability issues on ARM/ARM64 (virtual) machines -->
-    <!-- Windowws x86 & x64 -->
+    <!-- Windowws -->
     <TargetFrameworks>net481;net6.0</TargetFrameworks>
-    <!-- Windowws ARM64 -->
-    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT' and '$(PROCESSOR_ARCHITECTURE)' == 'ARM64'">net6.0</TargetFrameworks>
     <!-- POSIX -->
     <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">net6.0</TargetFrameworks>
 
@@ -14,10 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.0.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.0.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
-	<PackageReference Include="coverlet.collector" Version="3.1.2">
+	<PackageReference Include="coverlet.collector" Version="3.2.0">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
