Update libmagic Windows binaries to 5.44

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@ native/windows/*.sh text eol=lf
 # magic.mgc / magic.txt 
 ###############################################################################
 Joveler.FileMagician/runtimes/magic.mgc binary
-Joveler.FileMagician/runtimes/magic.txt text eol=lf 
+Joveler.FileMagician/runtimes/magic.src text eol=lf
 
 ###############################################################################
 # Set default behavior for command prompt diff.
