--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net462;netstandard2.0;netcoreapp3.1;</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard2.0;netcoreapp3.1;</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netstandard2.0;netcoreapp3.1;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -8,7 +8,7 @@
     <Title>Joveler.FileMagician</Title>
     <Version>2.4.0</Version>
     <Authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</Authors>
-    <Company>Joveler</Company>
+	<Company>Joveler</Company>
     <Description>libmagic (file) pinvoke library for .NET.
 Supports Windows, Linux and macOS.</Description>
     <Copyright>Copyright (c) 2019-2022 Hajin Jang</Copyright>
@@ -16,15 +16,14 @@ Supports Windows, Linux and macOS.</Description>
     <PackageProjectUrl>https://github.com/ied206/Joveler.FileMagician</PackageProjectUrl>
     <PackageIcon>images\Logo.png</PackageIcon>
     <RepositoryUrl>https://github.com/ied206/Joveler.FileMagician</RepositoryUrl>
-    <PackageReleaseNotes>- Update included libmagic to 5.41.
-- Official support for ARM64 macOS.
-- Replace .NET Standard 2.1 target with .NET Core 3.1.</PackageReleaseNotes>
+    <PackageReleaseNotes>- Update included libmagic to 5.44.
+- Target .NET Framework 4.6 instead of discontinued .NET Framework 4.5.1.</PackageReleaseNotes>
     <PackageTags>libmagic magic file native pinvoke interop</PackageTags>
   </PropertyGroup>
   <!-- PackageReference -->
   <ItemGroup>
     <PackageReference Include="Joveler.DynLoader" Version="2.1.1" />
-    <PackageReference Include="System.Memory" Version="4.5.5" Condition=" '$(TargetFramework)' == 'net462' or '$(TargetFramework)' == 'netstandard2.0' " />
+    <PackageReference Include="System.Memory" Version="4.5.5" Condition=" '$(TargetFramework)' == 'net46' or '$(TargetFramework)' == 'netstandard2.0' " />
   </ItemGroup>
   <!-- Shared NuGet Files -->
   <ItemGroup>
@@ -50,7 +49,7 @@ Supports Windows, Linux and macOS.</Description>
     </Content>
   </ItemGroup>
   <!-- Native Library for .NET Framework 4.6.2 -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <None Include="runtimes\win-x86\native\*.dll">
       <Link>x86\%(FileName)%(Extension)</Link> <!-- Project Reference -->
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -102,7 +101,7 @@ Supports Windows, Linux and macOS.</Description>
   <!-- NuGet Pacakge -->
   <ItemGroup>
     <!-- Build Script for .NET Framework -->
-    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net462\Joveler.FileMagician.targets" />
+    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net46\Joveler.FileMagician.targets" />
     <!-- NuGet Pacakge Icon -->
     <None Include="..\Image\Logo.png" Pack="true" PackagePath="images\Logo.png" />
     <!-- Native Library -->
