--- a/Joveler.FileMagician.Cli/Joveler.FileMagician.Cli.csproj
+++ b/Joveler.FileMagician.Cli/Joveler.FileMagician.Cli.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
+        
+        <PublishTrimmed>true</PublishTrimmed>
     </PropertyGroup>
 
     <ItemGroup>
