--- a/Joveler.FileMagician/Joveler.FileMagician.csproj
+++ b/Joveler.FileMagician/Joveler.FileMagician.csproj
@@ -8,9 +8,9 @@
     
     <PackageId>Joveler.FileMagician</PackageId>
     <Title>Joveler.FileMagician</Title>
-    <Version>2.4.0</Version>
+    <Version>2.3.0</Version>
     <Authors>Ian F. Darwin, Christos Zoulas, Hajin Jang</Authors>
-	<Company>Joveler</Company>
+	  <Company>Joveler</Company>
     <Description>libmagic (file) pinvoke library for .NET.
 Supports Windows, Linux and macOS.</Description>
     <Copyright>Copyright (C) 2019-2023 Hajin Jang</Copyright>
@@ -19,8 +19,11 @@ Supports Windows, Linux and macOS.</Description>
     <PackageIcon>images\Logo.png</PackageIcon>
     <RepositoryUrl>https://github.com/ied206/Joveler.FileMagician</RepositoryUrl>
     <PackageReleaseNotes>- Update included libmagic to 5.44.
+- Provide Joveler.FileMagician.Cli program on release.
+- Target .NET Core 3.1 instead of .NET Standard 2.1.
 - Target .NET Framework 4.6 instead of discontinued .NET Framework 4.5.1.</PackageReleaseNotes>
     <PackageTags>libmagic magic file native pinvoke interop</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <!-- PackageReference -->
   <ItemGroup>
@@ -103,10 +106,12 @@ Supports Windows, Linux and macOS.</Description>
   </ItemGroup>
   <!-- NuGet Pacakge -->
   <ItemGroup>
-    <!-- Build Script for .NET Framework -->
-    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net46\Joveler.FileMagician.targets" />
+    <!-- Nuget README -->
+    <None Include="NUGET_README.md" Pack="true" PackagePath="\README.md"/>
     <!-- NuGet Pacakge Icon -->
     <None Include="..\Image\Logo.png" Pack="true" PackagePath="images\Logo.png" />
+    <!-- Build Script for .NET Framework -->
+    <None Include="Joveler.FileMagician.netfx.targets" Pack="true" PackagePath="build\net46\Joveler.FileMagician.targets" />
     <!-- Native Library -->
     <None Include="runtimes\win-x86\native\*.dll" Pack="true" PackagePath="runtimes\win-x86\native" />
     <None Include="runtimes\win-x64\native\*.dll" Pack="true" PackagePath="runtimes\win-x64\native" />
